<resources>
    <string name="app_name">API Testing</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="edit_text_name_hint">Enter Your Name</string>
    <string name="edit_text_password_hint">Enter Your Password</string>
    <string name="edit_text_phone_hint">Enter Your Phone Number</string>
    <string name="edit_text_weight_hint">Enter Your Weight(pound)</string>
    <string name="edit_text_hospital_name">Enter Your Hospital Name</string>
    <string name="edit_text_date">Choose Your Birth Date</string>

    <string name="btn_login">Login</string>
    <string name="btn_home">Home</string>
    <string name="btn_order">Order</string>
    <string name="btn_order_blood">Order Blood</string>
    <string name="btn_request">Request List</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_search">Search</string>

    <string name="tv_name">Name :</string>
    <string name="tv_hospital_name">Hospital Name :</string>
    <string name="tv_password">Password :</string>
    <string name="tv_phone">Phone Number :</string>
    <string name="tv_weight">Weight :</string>
    <string name="tv_gender">Gender :</string>
    <string name="tv_date">Birth Date :</string>
    <string name="tv_blood_type">Choose Your Blood Type :</string>

    <string name="tv_a_plus">A+</string>
    <string name="tv_b_plus">B+</string>
    <string name="tv_o_plus">O+</string>
    <string name="tv_ab_plus">AB+</string>
    <string name="tv_a_minus">A-</string>
    <string name="tv_b_minus">B-</string>
    <string name="tv_o_minus">O-</string>
    <string name="tv_ab_minus">AB-</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_info">Info</string>
    <string name="to_sign_up">Already Sign Up! Login Here</string>
    <string name="date">date</string>
    <string name="gender">gender</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="image_view">Image View</string>
    <string name="tv_requirement">Requirement for BloodDonation</string>

    <string name="donation_info">
        <ol>
        <li>You are aged between 18 and 65</li>\n
        <li>You weigh at least 110lb</li>\n
        <li>You must be in good health at the time you donate</li>\n
        <li>If you have recently had a tattoo or body piercing you cannot
            donate for 6 months from the date of the procedure.  If the
            body piercing was performed by a registered health professional
            and any inflammation has settled completely, you can donate
            blood after 12 hours.</li>\n
        <li>Travel to areas where mosquito-borne infections are endemic,
            e.g. malaria, dengue and Zika virus infections, may result in a temporary deferral .</li>\n
        </ol>
    </string>

</resources>