<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginTop="5dp">

            <TextView
                style="@style/text_view_style"
                android:text="@string/tv_name" />

            <EditText
                android:id="@+id/edit_text_name"
                style="@style/edit_text_style"
                android:hint="@string/edit_text_name_hint"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_view_style"
                android:text="@string/tv_phone" />

            <EditText
                android:id="@+id/edit_text_phone"
                style="@style/edit_text_style"
                android:hint="@string/edit_text_phone_hint"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/text_view_style"
                android:text="@string/tv_gender" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="3dp"
                android:background="@drawable/edit_text_style"
                android:gravity="center_vertical"
                android:padding="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_view_style"
                android:text="@string/tv_weight" />

            <EditText
                android:id="@+id/edit_text_weight"
                style="@style/edit_text_style"
                android:hint="@string/edit_text_weight_hint"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_view_style"
                android:text="@string/tv_date" />

            <EditText

                android:id="@+id/edit_text_birth_date"
                style="@style/edit_text_style"
                android:focusable="false"
                android:hint="@string/edit_text_date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="vertical">

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:text="@string/tv_blood_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <RadioGroup
                    android:id="@+id/radio_group_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/plus_a"
                        style="@style/radio_button_style"
                        android:background="@drawable/custom_radio_button"
                        android:text="@string/tv_a_plus" />

                    <RadioButton
                        android:id="@+id/plus_b"
                        style="@style/radio_button_style"
                        android:background="@drawable/custom_radio_button"
                        android:text="@string/tv_b_plus" />

                    <RadioButton
                        android:id="@+id/plus_o"
                        style="@style/radio_button_style"
                        android:background="@drawable/custom_radio_button"
                        android:text="@string/tv_o_plus" />

                    <RadioButton
                        android:id="@+id/plus_ab"
                        style="@style/radio_button_style"
                        android:background="@drawable/custom_radio_button"
                        android:text="@string/tv_ab_plus" />
                </RadioGroup>


                <RadioGroup
                    android:id="@+id/radio_group_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/minus_a"
                        style="@style/radio_button_style"
                        android:background="@drawable/custom_radio_button"
                        android:text="@string/tv_a_minus" />

                    <RadioButton
                        android:id="@+id/minus_o"
                        style="@style/radio_button_style"
                        android:background="@drawable/custom_radio_button"
                        android:text="@string/tv_o_minus" />

                    <RadioButton
                        android:id="@+id/minus_b"
                        style="@style/radio_button_style"
                        android:background="@drawable/custom_radio_button"
                        android:text="@string/tv_b_minus" />

                    <RadioButton
                        android:id="@+id/minus_ab"
                        style="@style/radio_button_style"
                        android:background="@drawable/custom_radio_button"
                        android:text="@string/tv_ab_minus" />

                </RadioGroup>


            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_background"
            android:text="@string/btn_sign_up"
            android:textColor="@color/app_text_color" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already Sign Up! Login Here" />

    </LinearLayout>

</layout>