<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RadioGroup
            android:id="@+id/radio_group_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/plus_a"
                style="@style/radio_button_style"
                android:background="@drawable/custom_radio_button"
                android:text="@string/tv_a_plus" />

            <RadioButton
                android:id="@+id/plus_b"
                style="@style/radio_button_style"
                android:background="@drawable/custom_radio_button"
                android:text="@string/tv_b_plus" />

            <RadioButton
                android:id="@+id/plus_o"
                style="@style/radio_button_style"
                android:background="@drawable/custom_radio_button"
                android:text="@string/tv_o_plus" />

            <RadioButton
                android:id="@+id/plus_ab"
                style="@style/radio_button_style"
                android:background="@drawable/custom_radio_button"
                android:text="@string/tv_ab_plus" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radio_group_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/minus_a"
                style="@style/radio_button_style"
                android:background="@drawable/custom_radio_button"
                android:text="@string/tv_a_minus" />

            <RadioButton
                android:id="@+id/minus_o"
                style="@style/radio_button_style"
                android:background="@drawable/custom_radio_button"
                android:text="@string/tv_o_minus" />

            <RadioButton
                android:id="@+id/minus_b"
                style="@style/radio_button_style"
                android:background="@drawable/custom_radio_button"
                android:text="@string/tv_b_minus" />

            <RadioButton
                android:id="@+id/minus_ab"
                style="@style/radio_button_style"
                android:background="@drawable/custom_radio_button"
                android:text="@string/tv_ab_minus" />
        </RadioGroup>
        <Button
            android:id="@+id/btn_search"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btn_background"
            android:text="@string/btn_search"
            android:textColor="@color/app_text_color"/>
    </LinearLayout>
</layout>