<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/text_view_style"
                android:text="@string/tv_name" />

            <EditText
                android:id="@+id/edit_text_name"
                style="@style/edit_text_style"
                android:hint="@string/edit_text_name_hint"
                android:autofillHints="Number"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/text_view_style"
                android:text="@string/tv_phone" />

            <EditText

                android:id="@+id/edit_text_phone"
                style="@style/edit_text_style"
                android:hint="@string/edit_text_phone_hint"
                android:inputType="phone"
                android:autofillHints="Phone Number" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btn_background"
            android:text="@string/btn_login"
            android:textColor="@color/app_text_color">

        </Button>

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not a member? Sign Up Now"
            tools:ignore="HardcodedText" />

    </LinearLayout>


</layout>