<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view_blood_type"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/tv_ab_plus"
            android:textColor="@color/app_main_color"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/btn_phone"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_call"
            android:contentDescription="@string/tv_phone" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/text_view_blood_type"
            android:text="@string/edit_text_name_hint"
            android:textColor="@color/border_color"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_name"
            android:layout_toEndOf="@+id/text_view_blood_type"
            android:text="@string/date"
            android:textColor="@color/border_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/item_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_date"
            android:layout_toEndOf="@+id/text_view_blood_type"
            android:text="@string/gender"
            android:textColor="@color/border_color"
            tools:ignore="UnknownId" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>