<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:id="@+id/item_blood_type"
            android:text="@string/tv_ab_plus"
            android:textColor="@color/app_main_color"
            android:textSize="40sp"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <ImageView
            android:id="@+id/item_phone"
            android:src="@drawable/ic_call"
            android:layout_alignParentEnd="true"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/tv_phone" />

        <TextView
            android:id="@+id/item_name"
            android:text="@string/edit_text_name_hint"
            android:textColor="@color/border_color"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/item_blood_type"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/item_hospital_name"
            android:text="@string/hospital_name"
            android:textColor="@color/border_color"
            android:textSize="16sp"
            android:layout_below="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/item_blood_type"
            />

    </RelativeLayout>



</androidx.cardview.widget.CardView>